mengubah file index.html dan menambahkan file indes.css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>LLAO JUN LIANG</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima expedita modi quas ipsa iure quia possimus rem minus nihil eaque cupiditate officiis asperiores culpa, sint consequuntur ad voluptatibus molestiae perferendis.</h2>
 </body>
 </html>
