telah membuang file index.css dan telah menambah file script.js

--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    
 </head>
+<style>
+    body{
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    color: rgb(44, 63, 145);
+}
+</style>
 <body>
     <h1>LLAO JUN LIANG</h1>
+    <script type="text/javascript" src="script.js"></script>
     <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima expedita modi quas ipsa iure quia possimus rem minus nihil eaque cupiditate officiis asperiores culpa, sint consequuntur ad voluptatibus molestiae perferendis.</h2>
 </body>
 </html>
