buat perubahan di file html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </style>
 <body>
     <h1>LLAO JUN LIANG</h1>
+    <p>hai semua</p>
     <script type="text/javascript" src="script.js"></script>
     <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima expedita modi quas ipsa iure quia possimus rem minus nihil eaque cupiditate officiis asperiores culpa, sint consequuntur ad voluptatibus molestiae perferendis.</h2>
 </body>
