menambah header hai

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 }
 </style>
 <body>
+    <h2>haiiiiiiiiiiiiiiiiiiiiiiiiiiiii</h2>
     <h1>LLAO JUN LIANG</h1>
     <p>hai semua</p>
     <script type="text/javascript" src="script.js"></script>
